# Proiect2-SD

./: .gitignore  AVL.cpp  CMakeLists.txt  LICENSE.md  README.md  Treap.cpp  btree.cpp  main  main.cpp  test.sh
.github/workflows/: cmake.yml
Treaps/: Treap_infoarena  Treap_propriu-zis
extra/: AVL.cpp
extra/Treaps/: Treap_infoarena.cpp  Treap_propriu-zis
include/: avl.hpp  btree.hpp  btreenode.hpp  treap.hpp
src/: avl.cpp  btree.cpp  btreenode.cpp  treap.cpp
